Overlay initial OMFGB commit

--- a/rootdir/ueventd.rc
+++ b/rootdir/ueventd.rc
@@ -53,6 +53,7 @@
 /dev/msm_pcm_ctl*         0660   system     audio
 /dev/msm_snd*             0660   system     audio
 /dev/msm_mp3*             0660   system     audio
+/dev/msm_aac*             0660   system     audio
 /dev/audience_a1026*      0660   system     audio
 /dev/tpa2018d1*           0660   system     audio
 /dev/msm_audpre           0660   system     audio
@@ -79,4 +80,7 @@
 # sysfs properties
 /sys/devices/virtual/input/input*   enable      0660  root   input
 /sys/devices/virtual/input/input*   poll_delay  0660  root   input
+
+# video encoder on 720p-enabled 8k targets
+/dev/pmem_venc            0660   system     audio
 
